# env-diff

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
env_diff/: __init__.py  core.py
tests/: test_env_diff.py
